--- a/Front_End/assets/frontAwsome/fontawesome-free-6.4.0-web/metadata/icons.yml
+++ b/Front_End/assets/frontAwsome/fontawesome-free-6.4.0-web/metadata/icons.yml
@@ -3443,7 +3443,7 @@ bell-concierge:
       - bellhop bell
       - hotel
       - receptionist
-      - service
+      - com.easy.car_Rent.advisor.service
       - support
   styles:
     - solid
@@ -16831,7 +16831,7 @@ gamepad:
   search:
     terms:
       - arcade
-      - controller
+      - com.easy.car_Rent.advisor.controller
       - d-pad
       - joystick
       - video
@@ -35688,7 +35688,7 @@ taxi:
       - cab
       - cabbie
       - car
-      - car service
+      - car com.easy.car_Rent.advisor.service
       - lyft
       - machine
       - oncoming
